# mnist-nn

./: .gitignore  Cargo.toml
src/: main.rs  nn.rs
